--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# R Studio  files
+*.Rproj.user
+*.Rproj
+
+# data that isn't necesary for github
+data/images/*
+data/Off Duty Nicaragua.kmz
+exampleFromWork.R
+
 # Windows image file caches
 Thumbs.db
 ehthumbs.db
